# minesweeper-2

./: Cargo.toml  README.md
src/: lib.rs  minesweeper.rs  random.rs
web-src/: index.html
web-src/scripts/: main.js
web-src/styles/: base.css
