[package]
name = "minesweeper-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib" ]

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.60"
rand = "0.8.5"
substring = "1.4.5"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'DomTokenList',
    'Element',
    'EventListener',
    'EventTarget',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'NamedNodeMap',
    'Window',
]
